<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/background">
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="96dp"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/logo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >


    <EditText
        android:id="@+id/editText_name"
        android:layout_width="170dp"
        android:layout_height="30dp"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="40dp"
        android:hint="@string/Name"
        android:background="#ffffff"
        android:textColor="#6D7073"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText_surname"
        android:layout_width="170dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:hint="@string/Surname"
        android:background="#ffffff"
        android:textColor="#6D7073"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText_date"
        android:layout_width="170dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:hint="@string/Date"
        android:background="#ffffff"
        android:textColor="#6D7073"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText_time"
        android:layout_width="170dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:hint="@string/Time"
        android:background="#ffffff"
        android:textColor="#6D7073"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText_ID"
        android:layout_width="170dp"
        android:layout_height="30dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:hint="@string/ID"
        android:background="#ffffff"
        android:textColor="#6D7073"
        android:textStyle="bold" />


    <Button
        android:id="@+id/button_addData"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40dp"
        android:background="#31D3E8"
        android:text="@string/AddData"
        android:paddingLeft="5dp"
        />

    <Button
        android:id="@+id/button_View"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40dp"
        android:background="#31D3E8"
        android:text="@string/ViewData"
        android:paddingLeft="5dp"/>

    <Button
        android:id="@+id/button_updateData"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40dp"
        android:background="#31D3E8"
        android:text="@string/UpdateData"
        android:paddingLeft="5dp"
        />

    <Button
        android:id="@+id/button_deleteData"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40dp"
        android:background="#31D3E8"
        android:text="@string/DeleteData"
        android:paddingLeft="5dp"
        />

</LinearLayout>
    </ScrollView>

</LinearLayout>
