<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/background"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="96dp"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/editText_username1"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="30dp"
        android:drawableLeft="@drawable/username"
        android:hint="@string/username"
        android:paddingLeft="3dp"
        android:background="#ffffff"
        android:textColor="#6D7073"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/editText_password1"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/editText_username1"
        android:drawableLeft="@drawable/password"
        android:hint="@string/password"
        android:paddingLeft="3dp"
        android:background="#ffffff"
        android:textColor="#6D7073"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/button_login1"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/editText_password1"
        android:background="#31D3E8"
        android:text="@string/Login"
        android:paddingLeft="5dp"
        />



</LinearLayout>